added status LED and label

--- a/PhotoSketch/ColoringBook/index.html
+++ b/PhotoSketch/ColoringBook/index.html
@@ -15,6 +15,7 @@
         <div id="panel">
             <div id="setup"> </div>
             <div id="ctrl"> </div>
+            <div id="status"> </div>
         </div>
     </div>
     <script src="sketch.js"></script>
