--- a/AttnGAN/index.html
+++ b/AttnGAN/index.html
@@ -1,12 +1,24 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.dom.min.js"></script>
-    <meta charset="utf-8" />
+<head>
+  	<meta charset="UTF-8">
+	  <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
+	  <script language="javascript" type="text/javascript" src="libraries/p5.dom.js"></script>
+	  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="style/main.css">
+  
+</head>
 
-  </head>
-  <body>
-    <script src="sketch.js"></script>
-  </body>
+<body>
+<div class="container">
+	<div class="row justify-content-md-center">
+	  <div id="input" class="col col-lg-2">
+		
+	 </div>
+	 <div id="p5canvas">
+  </div>
+</div>
+  <!-- The main script -->
+  <script src="attn_gan.js"></script>
+</body>
+
 </html>
